--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,67 +1,139 @@
-@use './partials/variables' as *;
+@use "./partials/variables" as *;
 
-.title-logo{
-    font-family:'Playfair Display';
-    color: white;
-    font-size:32px;
+body {
+  background-color: $darkest-green;
+  margin:0;
 }
 
-.nav{
-    display: flex;
-    justify-content:space-between;
-    border-bottom: 4px solid $light-green;
-    position:fixed;
-    width:100%;
-    background-color: $darkest-green;
+.title-logo {
+  font-family: "Playfair Display";
+  color: white;
+  font-size: 32px;
+  padding-left:1.25rem;
 }
 
-.nav-items{
-    display:flex;
-    justify-content: space-around;
-    align-items:center;
-    list-style: none;
-    text-decoration: none;
-    font-family:'Poppins';
-    padding: 0 20px;
+.nav {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 4px solid $light-green;
+  position: fixed;
+  width: 100%;
+  background-color: $darkest-green;
+  margin: 0;
+  z-index: 1;
+
+
+    &-items {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        list-style: none;
+        text-decoration: none;
+        font-family: "Poppins";
+        padding: 0 20px;
+    }
+    
+    &-item {
+        padding: 0 10px;
+        text-decoration: none;
+        font-size: 24px;
+    }
 }
 
-.nav-item{
-    padding:0 10px;
-    text-decoration: none;
-    font-size:24px;
+
+a {
+  text-decoration: none;
 }
 
-a{
-    text-decoration: none;
+.nav-link {
+  color: white;
 }
 
-.nav-link{
-    color:white;
+.padding {
+  height: 100px;
 }
-
-.padding{
-    height:100px;
-}
-
 
 // Styling the Hero
-.hero{
-    border:2px solid red;
-    height: 40vh;
-    background-image: url(../assets/rubberplanthero.jpg);
-    background-size: cover;
-    position:relative;
-}
+.hero {
+  height: 40vh;
+  background-image: url(../assets/rubberplanthero.jpg);
+  background-size: cover;
+  position: relative;
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
 
-
-.hero-title{
-    font-family:'Playfair-Display';
-    font-size:60px;
+  &__title {
+    font-family: "Playfair-Display";
+    font-size: 60px;
     color: $darkest-green;
     -webkit-text-stroke: 1px;
     -webkit-text-stroke-color: white;
-    position:absolute;
-    right:320px;
-    top:100px;
-    margin:0;
+    position: absolute;
+    right: 320px;
+    top: 100px;
+    margin: 0;
+  }
+
+  &__subtitle {
+    font-family: "Poppins";
+    position: absolute;
+    font-weight: 400;
+    width: 25rem;
+    text-align: center;
+    right: 280px;
+    top: 150px;
+    color: $dark-green;
+  }
+}
+
+.featured-card {
+  border: 2px solid blue;
+  width: 300px;
+  height: 150px;
+  margin-bottom:20px;
+  background-color: $greige;
+}
+
+
+.container{
+    display:flex;
+    justify-content: space-around;
+
+}
+.new-plants{
+    background-color:$greige;
+    display:flex;
+    justify-content: space-evenly;
+    flex-wrap:wrap;
+    width:50rem;
+    margin:20px 0;
+    border-radius: 10px;
+
+
+    &__card{
+        height:12.5rem;
+        width:12.5rem;
+        border:2px solid black;
+        margin:0.625rem;
+    }
+}
+
+.plant-care-info{
+    background-color: $greige;
+    display:flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    margin:1.25rem;
+    border-radius: 10px;
+
+
+    &__article{
+        width:12.5rem;
+        height:6.25rem;
+        border:2px solid black;
+        margin:1.25rem;
+    }
+
 }
